--- a/style.css
+++ b/style.css
@@ -11,6 +11,88 @@ li{
     list-style-type: none;
 }
 
+a{
+    text-decoration: none;
+}
+
+.orange{
+    color: #B24BF3 !important;
+}
+
+.title{
+    font-size: 120px;
+    margin-bottom: 12px;
+    text-align: left;
+    line-height: 1;
+}
+
+p{
+    line-height: 1.5;
+    font-size: 16px;
+}
+
+.click{
+    transition: all 300ms ease;
+}
+
+.click:hover{
+    transform: scale(1.1);
+}
+
+.click:active{
+    transform: scale(0.8);
+}
+
+/*
+
+LANDING PAGE
+
+*/
+
+#landing-page{
+    min-height: 100vh;
+}
+
+section{
+    background-color: rgb(245, 245, 245);
+}
+
+.header{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 1000px;
+    padding-left: 30px;
+}
+
+.header__para{
+    width: 100%;
+    max-width: 480px;
+    font-size: 24px;
+    line-height: 2;
+}
+
+.social__list{
+    margin-top: 16px;
+    display: flex;
+}
+
+.social__link{
+    background-color: #B24BF3;
+    color: white;
+    padding: 6px;
+    width: 32px;
+    height: 32px;
+    font-size: 14px;
+    margin-right: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
 /*
 
 NAVIGATION
@@ -30,6 +112,7 @@ nav{
     max-width: 1200px;
     margin: 0 auto;
     height: 100px;
+    padding-left: 20px;
 }
 
 .nav__link--list{
@@ -50,3 +133,5 @@ nav{
 .fa-adjust{
     font-size: 20px;
 }
+
+/* 35:22
