mail and scroll icon

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ a{
     text-decoration: none;
 }
 
+button{
+    cursor: pointer;
+}
+
 .orange{
     color: #B24BF3 !important;
 }
@@ -93,6 +97,55 @@ section{
     border-radius: 50%;
 }
 
+.mail__btn{
+    background-color: #242424;
+    color: white;
+    width: 70px;
+    height: 70px;
+    font-size: 32px;
+    border-radius: 50%;
+    border: none;
+    position: absolute;
+    bottom: 32px;
+    right: 32px;
+}
+
+.scroll{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%)
+}
+
+.scroll__icon{
+    width: 20px;
+    height: 30px;
+    border: 2px solid #242424;
+    border-radius: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.scroll__icon:after{
+    content: "";
+    width: 4px;
+    height: 6px;
+    background-color: #242424;
+    border-radius: 2px;
+    animation: scroll 1000ms infinite alternate-reverse;
+}
+
+@keyframes scroll{
+    0%{
+        transform: translateY(3px);
+    }
+    100%{
+        transform: translateY(-3px);
+    }
+}
+
 /*
 
 NAVIGATION
@@ -134,4 +187,4 @@ nav{
     font-size: 20px;
 }
 
-/* 35:22
+
