--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ button{
     cursor: pointer;
 }
 
-.orange{
+.purple{
     color: #B24BF3 !important;
 }
 
@@ -33,6 +33,17 @@ button{
 p{
     line-height: 1.5;
     font-size: 16px;
+}
+
+.container{
+    padding: 50px 0;
+}
+
+.row{
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 12px;
 }
 
 .click{
@@ -187,6 +198,82 @@ nav{
     font-size: 20px;
 }
 
-/*45:12
+/*
 
+PROJECTS
 
+*/
+
+.project{
+    padding-top: 100px;
+}
+
+.section__title{
+    text-align: center;
+    font-size: 48px;
+    padding-bottom: 24px;
+}
+
+.project__img{
+    width: 100%;
+    transition: transform 300ms;
+}
+
+.project__wrapper{
+    position: relative;
+    border-radius: 20px;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+    overflow: hidden;
+}
+
+.project__wrapper:hover .project__description{
+    opacity: 1;
+    transform: translateY(-50%);
+}
+
+.project__wrapper:hover .project__img{
+    transform: scale(1.07);
+}
+
+.project__wrapper:hover .project__wrapper--bg{
+    opacity: 0.7;
+}
+
+.project__description{
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    color: white;
+    opacity: 0;
+    transition: opacity 300ms, transform 450ms;
+    max-width: 550px;
+}
+
+.project__wrapper--bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: opacity 300ms;
+}
+
+.project__description--title{
+    font-size: 40px;
+}
+
+.project__description--sub-title{
+    margin-top: 8px;
+}
+
+.project__description--link{
+    color: white;
+    font-size: 20px;
+    margin-right: 16px;
+}
+
+.project__description--para{
+    margin: 16px 0;
+}
