--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ p{
 
 .container{
     padding: 50px 0;
+    width: 100%;
 }
 
 .row{
@@ -56,6 +57,30 @@ p{
 
 .click:active{
     transform: scale(0.8);
+}
+
+.link__hover-effect{
+    position: relative;
+}
+
+.link__hover-effect:after{
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    height: 3px;
+    width: 0;
+    right: 0;
+    background-color: black;
+    transition: all 300ms ease;
+}
+
+.link__hover-effect--white:after{
+    background-color: white;
+}
+
+.link__hover-effect:hover:after{
+    left: 0;
+    width: 100%;
 }
 
 /*
@@ -286,7 +311,13 @@ FOOTER
 footer{
     background-color: #242424;
     display: flex;
-    justify-content: center;
+    padding: 6% 0;
+}
+
+.footer__row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #footer__personal-logo{
@@ -294,16 +325,20 @@ footer{
     filter: invert(1);
 }
 
+.footer__social--list{
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
+}
+
 .footer__social--link{
     color: white;
-    padding: 0 16px;
 }
 
 .footer__copyright{
     color: white;
-    display: flex;
-    justify-content: center;
-    padding-top: 12px;
+    padding-top: 16px;
 }
 
 .img__footer{
