--- a/style.css
+++ b/style.css
@@ -47,6 +47,29 @@ p{
     padding: 0 12px;
 }
 
+input, textarea{
+    width: 100%;
+    background-color: #242424;
+    color: #fff;
+    outline: none;
+    border: 1px solid #c0c4cc;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    height: 40px;
+}
+
+textarea{
+    resize: vertical;
+    height: 100px;
+    margin-top: 8px;
+}
+
+label{
+    font-size: 14px;
+    font-weight: bold;
+}
+
 .click{
     transition: all 300ms ease;
 }
@@ -246,13 +269,13 @@ MODAL
 .modal__half{
     width: 50%;
     padding: 40px 72px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .modal__about{
     background-color: rgb(245, 245, 245);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .modal__contact{
@@ -293,6 +316,7 @@ MODAL
 
 .modal__sub-title{
     margin: 12px 0 24px 0;
+    font-size: 14px;
 }
 
 .modal__para{
@@ -306,6 +330,43 @@ MODAL
     bottom: -10px;
     transform: scale(0);
     transition: all 300ms ease;
+}
+
+.modal__title--contact{
+    color: white;
+}
+
+.modal__sub-title--contact{
+    color: white;
+}
+
+.form__item--label{
+    color: white;
+}
+
+.form__item{
+    margin-bottom: 20px;
+}
+
+.form__submit{
+    background-color: #B24BF3;
+    padding: 12px;
+    border-radius: 12px;
+    border: none;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    max-width: 200px;
+    font-size: 14px;
+    transition: all 200ms ease;
+}
+
+.form__submit:hover{
+    background-color: #8638b6;
+}
+
+.form__submit:active{
+    color: rgb(163, 162, 162);
 }
 
 /*
