--- a/style.css
+++ b/style.css
@@ -35,6 +35,14 @@ p{
     font-size: 16px;
 }
 
+input:hover, textarea:hover{
+    border-color: #8d8d8d;
+}
+
+input:focus, textarea:focus{
+    border-color:#8638b6;
+}
+
 .container{
     padding: 50px 0;
     width: 100%;
@@ -57,6 +65,7 @@ input, textarea{
     border-left: none;
     border-right: none;
     height: 40px;
+    transition: all 300ms ease;
 }
 
 textarea{
@@ -75,6 +84,7 @@ label{
 }
 
 .click:hover{
+    cursor: pointer;
     transform: scale(1.1);
 }
 
@@ -272,6 +282,7 @@ MODAL
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 }
 
 .modal__about{
@@ -367,6 +378,55 @@ MODAL
 
 .form__submit:active{
     color: rgb(163, 162, 162);
+}
+
+.modal__overlay{
+    background-color: #242424;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal__overlay--loading{
+    font-size: 80px;
+    color: white;
+    z-index: -1;
+}
+
+.modal__overlay--success{
+    background-color: #4bb543;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    padding: 28px;
+    color: white;
+}
+
+.fa-spinner{
+    animation: spinner 750ms infinite linear;
+}
+
+@keyframes spinner{
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.modal__exit{
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    color: white;
+    font-size: 36px;
+    z-index: 100;
 }
 
 /*
