--- a/style.css
+++ b/style.css
@@ -285,6 +285,18 @@ MODAL
     flex-direction: column;
     justify-content: center;
     position: relative;
+    transition: all 300ms ease;
+}
+
+.modal__open .modal__about,
+.modal__open .modal__contact{
+    transform: translate(0%);
+}
+
+
+.modal__about{
+    background-color: rgb(255, 255, 255);
+    transform: translate(-110%);
 }
 
 .modal__open .modal{
@@ -293,12 +305,9 @@ MODAL
     visibility: visible;
 }
 
-.modal__about{
-    background-color: rgb(245, 245, 245);
-}
-
 .modal__contact{
     background-color: #242424;
+    transform: translate(-200%);
 }
 
 .modal__languages{
@@ -395,7 +404,7 @@ MODAL
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: -1;
@@ -419,6 +428,7 @@ MODAL
 
 .modal__overlay--visible{
     z-index: 1;
+    display: flex;
 }
 
 .fa-spinner{
