--- a/style.css
+++ b/style.css
@@ -132,6 +132,49 @@ nav,
     transition: all 400ms;
 }
 
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para
+{
+    color: white;
+    
+}
+
+.dark-theme .purple{
+    color: #c26ff5 !important;
+}
+
+.dark-theme .social__link{
+    background-color: #c26ff5;
+}
+
+.dark-theme section{
+    background-color: #242424;
+}
+
+.dark-theme #personal-logo{
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
+}
+
+.dark-theme .scroll__icon{
+    border-color: white;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect:after{
+    background-color: white;
+}
+
+.dark-theme .mail__btn{
+    background-color: white;
+    color: #242424;
+}
+
+
 
 /*
 
@@ -145,6 +188,7 @@ LANDING PAGE
 
 section{
     background-color: rgb(245, 245, 245);
+    transition: all 300ms ease;
 }
 
 .header{
