--- a/style.css
+++ b/style.css
@@ -550,10 +550,11 @@ PROJECTS
 
 .project__wrapper:hover .project__img{
     transform: scale(1.07);
+    background-image: url('screen-hover.jpg');
 }
 
 .project__wrapper:hover .project__wrapper--bg{
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 .project__description{
