--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ button{
 }
 
 .purple{
-    color: #B24BF3 !important;
+    color: #00b7eb !important;
 }
 
 .title{
@@ -44,7 +44,7 @@ input:hover, textarea:hover{
 }
 
 input:focus, textarea:focus{
-    border-color:#8638b6;
+    border-color:#00b7eb;
 }
 
 .container{
@@ -128,6 +128,10 @@ nav,
     transition: all 500ms 600ms;
 }
 
+.avatar {
+    
+}
+
 .modal__open nav, 
 .modal__open .scroll,
 .modal__open .header {
@@ -144,15 +148,14 @@ nav,
 .dark-theme .header__para
 {
     color: white;
-    
 }
 
 .dark-theme .purple{
-    color: #c26ff5 !important;
+    color: #00b7eb !important;
 }
 
 .dark-theme .social__link{
-    background-color: #c26ff5;
+    background-color: #00b7eb;
 }
 
 .dark-theme section{
@@ -194,13 +197,14 @@ section{
 }
 
 .header{
+    display: flex;
+    justify-content: space-between;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
     max-width: 1000px;
-    padding-left: 30px;
 }
 
 .header__para{
@@ -216,7 +220,7 @@ section{
 }
 
 .social__link{
-    background-color: #B24BF3;
+    background-color: #00b7eb;
     color: white;
     padding: 6px;
     width: 32px;
@@ -297,7 +301,6 @@ nav{
     max-width: 1200px;
     margin: 0 auto;
     height: 100px;
-    padding-left: 20px;
 }
 
 .nav__link--list{
@@ -440,7 +443,7 @@ MODAL
 }
 
 .form__submit{
-    background-color: #B24BF3;
+    background-color: #00b7eb;
     padding: 12px;
     border-radius: 12px;
     border: none;
@@ -453,7 +456,7 @@ MODAL
 }
 
 .form__submit:hover{
-    background-color: #8638b6;
+    background-color: #00b7eb;
 }
 
 .form__submit:active{
